public/assets/styles/base.css
:root {
  --font-base: Nunito, Nunito-fallback, system-ui, -apple-system, "Segoe UI",
    "Open Sans", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji";
  --font-display: Nunito, Nunito-fallback, system-ui, -apple-system, "Segoe UI",
    "Open Sans", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji";
  --font-mono: Consolas, ui-monospace, SFMono-Regular, Menlo, Monaco,
    "Liberation Mono", "Courier New", monospace;

  --bg-primary: #fafafa; /* gray-50 */
  --bg-secondary: #e4e4e7; /* gray-200 */
  --text-primary: #475569;
  --text-secondary: #1e293b;
  --color-primary: #e11d48; /* red */
  --color-links: #01778b;
}

.dark {
  --bg-primary: #1c232e;
  --bg-secondary: #111827; /* coolGray-900 */
  --text-primary: #d4cece;
  --text-secondary: #e9e1e1;
  --color-primary: #67e8f9; /* cyan-300 */
  --color-links: #7ecbd7;
}

@font-face {
  font-family: "Nunito-fallback";
  ascent-override: 110%;
  descent-override: 20%;
  line-gap-override: normal;
  advance-override: 10;
  src: local(Arial);
}

@font-face {
  font-family: "Nunito";
  src: url("/assets/fonts/Nunito[wght]-subset.woff2") format("woff2");
  font-weight: 125 950;
  font-stretch: 75% 125%;
  font-style: normal;
  font-display: optional;
}

@font-face {
  font-family: "Nunito";
  src: url("/assets/fonts/Nunito-Italic[wght]-subset.woff2") format("woff2");
  font-weight: 125 950;
  font-stretch: 75% 125%;
  font-style: italic;
  font-display: optional;
}

@media (prefers-reduced-motion) {
  html {
    scroll-behavior: auto !important;
  }
}

html {
  min-height: 100vh;
}

body {
  display: grid;
  grid-template-rows: auto 1fr auto;
  height: 100%;
  min-height: 100vh;
  transition-property: color, background-color, border-color,
    text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 200ms;
  background-color: var(--bg-primary);
  color: var(--text-primary);
  font-family: var(--font-base);
  font-synthesis: none;
}

html.dark {
  background: radial-gradient(
    circle,
    rgba(28, 35, 46, 1) 0%,
    rgba(28, 35, 46, 1) 30%,
    rgba(17, 24, 35, 1) 110%
  );
  background-attachment: fixed;
}

@-moz-document url-prefix() {
  html.dark {
    background: var(--bg-primary);
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-display);
}

[id] {
  scroll-margin-top: 45vh;
}

pre.prism-code {
  box-shadow: rgb(0 2 4 / 20%) 0px 5px 20px -10px;
  filter: contrast(1.05);
}

.dark .prism-code .line_highlight {
  background-color: rgba(53, 59, 69, 0.6);
  display: block;
  margin-right: -1em;
  margin-left: -1em;
  padding-right: 1em;
  padding-left: 1em;
}

.prism-code::-webkit-scrollbar-track {
  border-radius: 0.375rem;
}

.prism-code::-webkit-scrollbar {
  border-radius: 0.375rem;
}

.prism-code::-webkit-scrollbar-thumb {
  border-radius: 0.5rem;
  border: 3px solid rgb(246, 248, 250);
  background-color: #d4d4d7;
}

.dark .prism-code::-webkit-scrollbar-thumb {
  border-radius: 0.5rem;
  border: 5px solid rgba(1, 22, 39, 40);
  background-color: rgb(50, 62, 80);
}

@keyframes swing {
  0% {
    background-position: 100% center;
    animation-timing-function: ease-in;
  }
  22% {
    background-position: -20.5% center;
    aanimation-timing-function: ease-out;
  }
  48% {
    background-position: 25% center;
    animationtimingfunction: ease-in;
  }
  59% {
    background-position: -29.5% center;
    animation-timing-function: ease-out;
  }
}

